# mfrc522-cpp

./: .gitmodules  CMakeLists.txt  MFRC522.cpp  MFRC522.h  README.md  README.rst  Read.cpp
apps/bcm2835_read_example/: CMakeLists.txt  bcm2835.h  bcm2835_gpio_impl.h  bcm2835_spi_impl.h  main.cc
apps/spidev_read_example/: CMakeLists.txt  main.cc  spidev_impl.h  sys_gpio_impl.h
libs/: CMakeLists.txt
libs/mfrc522/: igpio.h  mfrc522.cc
